# development-roadmap

./: CHECKLIST.md  README.md
01-Java-Projects/: README.md
01-Java-Projects/calculator/: README.md  ScientificCalculator.java
01-Java-Projects/chat-server/: DETTAGLI_TECNICI.md  GUIDA_TEST.md  PROGETTO_COMPLETO.md  QUICK_REFERENCE.md  README.md  STRUCTURE.txt  start-client.bat  start-server.bat
01-Java-Projects/currency-converter/: .gitignore  ARCHITECTURE.md  FEATURES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pom.xml  run.bat  run.sh
01-Java-Projects/ecommerce-microservices/: .gitignore  ARCHITECTURE.md  OVERVIEW.txt  PROJECT-SUMMARY.md  QUICK-START.md  README.md  start-all.bat  start-all.sh  test-api.bat  test-api.sh
01-Java-Projects/file-organizer/: .gitignore  COMPILATION_FIXES.md  DEMO.md  FIXED_VERSION.md  INDEX.md  OVERVIEW.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_FIXED.md  build-simple.bat  build-simple.sh  build.bat  build.sh  pom.xml  run-simple.bat  run-simple.sh  run.bat  run.sh  sample-log.txt
01-Java-Projects/spring-auth-system/: ARCHITECTURE.md  EXAMPLE_REQUESTS.http  QUICKSTART.md  README.md  RIEPILOGO.md  generate-secret.sh  pom.xml
01-Java-Projects/task-manager-desktop/: .gitignore  ARCHITECTURE.md  LAUNCH_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.txt  README.md  build.bat  pom.xml  run.bat
01-Java-Projects/todo-list-console/: ESPERIENZA_UTENTE.md  GUIDA_STUDENTI.md  QUICK_REFERENCE.md  README.md  STRUTTURA_PROGETTO.md  TodoListApp.java  run.bat  run.sh  tasks.txt
02-C-Projects/: README.md
02-C-Projects/bigint/: Makefile  PROJECT.md  QUICKREF.md  README.md  bigint.c  bigint.h  examples.c  main.c
02-C-Projects/data-structures/: .gitignore  Makefile  PROJECT_SUMMARY.md  QUICKREF.md  README.md  hashtable.c  hashtable.h  list.c  list.h  main.c  queue.c  queue.h  stack.c  stack.h
02-C-Projects/dynamic-array/: .gitignore  ARCHITECTURE.md  CHEATSHEET.md  Makefile  PROGETTO.md  README.md  dynamic_array.c  dynamic_array.h  main.c
02-C-Projects/http-server/: .gitignore  DIAGRAMMI.md  Makefile  QUICKSTART.md  README.md  TESTING.md  build.bat  build.sh  server.c
02-C-Projects/memory-allocator/: Makefile  README.md  allocator.c  allocator.h  test.c
02-C-Projects/mini-database/: .gitignore  ARCHITECTURE.md  DIAGRAM.txt  FEATURES.md  INDEX.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  database.c  database.h  example_session.txt  main.c  test.bat  test.sh
02-C-Projects/mini-shell/: .gitignore  EXAMPLES.md  INDEX.md  INSTALLAZIONE.md  Makefile  Makefile.test  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.bat  demo.bat  demo.sh  shell.c  shell.h  test_shell.c
02-C-Projects/mini-vim/: .gitignore  ARCHITETTURA.txt  Makefile  PROGETTO.md  QUICKSTART.md  README.md  buffer.c  buffer.h  build.bat  build.sh  cleanup.bat  editor.c  example.txt
02-C-Projects/mini-zip/: .gitignore  Makefile  README.md  demo.bat  example.txt  mini-zip.c  test-file.txt
02-C-Projects/string-library/: Makefile  QUICKREF.md  README.md  stringlib.c  stringlib.h  test_stringlib.c
03-Cpp-Projects/: README.md
03-Cpp-Projects/bigint-calculator/: .gitignore  CMakeLists.txt  GUIDE_RAPIDA.md  Makefile  PROJECT_SUMMARY.md  README.md  bigint.cpp  bigint.h  main.cpp
03-Cpp-Projects/console-game/: .gitignore  CLASS_DIAGRAM.txt  CMakeLists.txt  ConsoleGame.cpp  EXERCISES.md  Makefile  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  START_HERE.md  build.bat
03-Cpp-Projects/custom-stl/: ARCHITECTURE.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  algorithms.h  list.h  list.tpp  main.cpp  vector.h  vector.tpp
03-Cpp-Projects/database-engine/: .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  PROJECT_SUMMARY.md  README.md  btree.cpp  btree.h  database.cpp  database.h  examples.sql  main.cpp  sql.cpp  sql.h
03-Cpp-Projects/game-engine-2d/: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  STRUCTURE.md  build.bat  engine.h  entity.h  main.cpp  vec2.h
03-Cpp-Projects/http-server-cpp/: .gitignore  CMakeLists.txt  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  build-msvc.bat  build.bat  build.sh  main.cpp  server.cpp  server.h  thread_pool.cpp  thread_pool.h
03-Cpp-Projects/http-server-cpp/public/: index.html  script.js  styles.css
03-Cpp-Projects/memory-allocator-cpp/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  FEATURES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.bat  build.sh
03-Cpp-Projects/memory-allocator-cpp/include/: allocator.h  debug.h  pool.h
03-Cpp-Projects/memory-allocator-cpp/src/: allocator.cpp  main.cpp  pool.cpp
03-Cpp-Projects/regex-engine/: CMakeLists.txt  Makefile  README.md  build.bat  debug_regex.cpp  debug_test.cpp  dfa.cpp  dfa.h  main.cpp  nfa.cpp  nfa.h  regex.cpp  regex.h  test_postfix.cpp  test_simple.cpp
03-Cpp-Projects/student-manager/: Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USAGE.md  VERIFICATION.md  build.bat  main.cpp  sample_data.txt  student.cpp  student.h  test.bat
04-Python-Projects/: README.md
04-Python-Projects/chatbot-ai/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  chatbot.py  demo.py  test_chatbot.py  training_data.json
04-Python-Projects/contact-book/: README.md  contact_book.py
04-Python-Projects/expense-tracker/: README.md  expense_tracker.py
04-Python-Projects/file-organizer/: README_ORGANIZER.md  file_organizer.py
04-Python-Projects/guessing-game/: README_GUESSING.md  number_guess.py
04-Python-Projects/music-player/: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.json  example_usage.py  music_player.py  requirements.txt
04-Python-Projects/password-manager/: LICENSE  README_PASSWORD.md  password_generator.py
04-Python-Projects/quiz-app/: README.md  quiz_app.py
04-Python-Projects/stock-analyzer/: FEATURES.md  QUICKSTART.md  (+6 more)
05-JavaScript-Projects/: README.md
06-Web-Development/: README.md
07-Database-Projects/: README.md
08-Mobile-Projects/: README.md
09-Security-Projects/: 09-XSS-DETECTOR-COMPLETE.txt  README.md
10-System-Programming/: README.md
(+709 files in other folders)
